[feat] Update Swagger Docs Add currency parameter to list products
